--- a/fundamentos/bloco03-introducao_HTML_CSS/02-HTML_CSS-primeiros_passos_CSS/index.html
+++ b/fundamentos/bloco03-introducao_HTML_CSS/02-HTML_CSS-primeiros_passos_CSS/index.html
@@ -4,18 +4,45 @@
         <meta charset="UTF-8">
         <title>HTML</title>
         <style>
+            body
+            {
+                font-size: 16px;
+            }
             h1
             {
                 font-size: 65px;
                 color: orange;
+                font-family: sans-serif;
+                text-align: center;
+            }
+            p
+            {
+                font-weight: 600;
+                font-size: 3em;
+                line-height: 60px;
             }
             ul
             {
                 background-color: lightsalmon;
+                font-style: oblique;
+                text-decoration: underline;
             }
             .fundo
             {
                 background-color: lightsteelblue;
+            }
+            #amarelo
+            {
+                background-color: #ecd02f;
+            }
+            #vermelho 
+            {
+                background-color: #ec2f2f;
+            }
+            #marrom
+            {
+                background-color: #5e1010;
+                color: whitesmoke;
             }
         </style>
     </head>
@@ -23,9 +50,9 @@
         <h1>Exercícios 3.2</h1>
         <p class="fundo">Qual é a sua cor favorita?</p>
         <ul class="fundo">
-            <li>Amarelo</li>
-            <li>Vermelho</li>
-            <li>Marrom</li>
+            <li id="amarelo">Amarelo</li>
+            <li id="vermelho">Vermelho</li>
+            <li id="marrom">Marrom</li>
         </ul>
     </body>
 </html>
