--- a/fundamentos/bloco03-introducao_HTML_CSS/04-HTML-semantico/index.html
+++ b/fundamentos/bloco03-introducao_HTML_CSS/04-HTML-semantico/index.html
@@ -4,12 +4,42 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <title>Camarao</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
+        <nav>
+            <img src="https://static.thenounproject.com/png/3890820-200.png" alt="">
+            <a href="">Página Inicial</a>
+            <a href="">Sobre</a>
+            <a href="">Contato</a>
+        </nav>
         <h1>Soco a 80km/h: Conheça o Stomatopoda</h1>
     </header>
+    <article>
+        <h2>Fatos sobre o Stomatopoda</h2>
+        <section>
+            <h3>Coisitas de camarao</h3>
+            <p>informações gerais do camarao <br><em>Odontodactylus scyllarus</em></p>
+            <table></table>
+        </section>
+        <section>
+            <h3>Fatos show</h3>
+            <p>fatos interessantes</p>
+            <img src="" alt="">
+        </section>
+        <section>
+            <h3>referencias</h3>
+            <ul>
+                <li>link</li>
+            </ul>
+        </section>
+    </article>
+    <footer>
+        <p>"Conteúdo compilado por Pedro Gomes, 2021".</p>
+    </footer>
 </body>
 
 </html>
