--- a/fundamentos/bloco-6-HTML-CSS-forms-flexbox-responsivo/01-HTML-CSS-forms/form.html
+++ b/fundamentos/bloco-6-HTML-CSS-forms-flexbox-responsivo/01-HTML-CSS-forms/form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ot-br">
 
 <head>
     <meta charset="UTF-8">
@@ -9,7 +9,41 @@
 </head>
 
 <body>
-    <fieldset></fieldset>
+    <form action="">
+        <fieldset>
+            <label for="">Nome</label>
+            <input type="text" name="name" id="name" required>
+            <br>
+            <label for="">E-mail</label>
+            <input type="email" name="" id="">
+            <br>
+            <label for="">CPF</label>
+            <input type="text" name="" id="">
+            <br>
+            <label for="">Endereço</label>
+            <input type="text" name="" id="">
+            <br>
+            <label for="">Cidade</label>
+            <input type="text" name="" id="">
+            <br>
+            <label for="">Estado</label>
+            <select name="" id=""></select>
+            <br>
+            <label for="">Tipo</label>
+            <input type="radio" name="moradia" id=""> casa
+            <input type="radio" name="moradia" id=""> apartamento
+        </fieldset>
+        <fieldset>
+            <label for="">Resumo do currículo</label>
+            <br>
+            <textarea name="" id="" cols="30" rows="10"></textarea>
+            <br>
+            <label for="">Cargo</label>
+            <input type="text" name="" id=""><br>
+            <label for="">Descrição do Cargo</label>
+            <input type="text" name="" id="">
+        </fieldset>
+    </form>
 </body>
 
 </html>
